--- a/src/app/pages/mapa/mapa.page.html
+++ b/src/app/pages/mapa/mapa.page.html
@@ -1,5 +1,11 @@
 
 
 <ion-content>
-<h1>Mapa</h1>
+
+        <div id='map' >
+        <ion-back-button defaultHref="/tabs/tab2" text=""
+        class="boton-regresar" icon="close-circle"></ion-back-button>
+   
+
+    </div>
 </ion-content>
